# digirent-api

./: .dockerignore  .flake8  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  dockerfile  entrypoint.sh  heroku.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 062a4231f34d_include_spatial_column_on_apartment.py  119ac0475013_initial_migration.py  1ffa3186eb5d_new_blog_post_and_tag_models.py  2035a8d230ba_new_chat_message_model.py  2489196d5d49_include_is_archived_column_on_apartment.py  460e0e7baec7_redefine_user_model.py  4f5ca20c1ac7_new_bank_detail_model.py  50e21692f872_.py  612ca02e7672_initial_migration.py  76080a524c19_define_invoice_model.py  8739603a460f_add_new_account_id_and_account_email_.py  8f52c492d908_include_has_document_on_contract.py  a28b39c95b06_new_notifications_model.py  ad3283d42fd5_new_tenant_apartment_favorites_table.py  b079c5571a43_new_looking_for_model.py  b6299dde6105_define_amenities_model.py  bb276adbfff8_define_apartment_application_model.py  c2628fa3a381_initial_migration.py  c727dec91c91_define_new_contracts_model.py  cd76843d4ea4_new_booking_request_model.py  cefa26545898_update_user_model.py  df0c688043a1_initial_migration.py  (+3 more)
env/: .db.template.env  .env.template  .pgadmin.template.env
nginx/: default.conf  dockerfile  nginx.conf
templates/: application_awarded.html  application_considered.html  application_rejected.html  password_recovery.html  verification.html  welcome.html
tests/: conftest.py  test_amenities_api.py  test_apartment_applications_api.py  test_apartment_service.py  test_apartments_api.py  test_api_scope.py  test_app.py  test_auth_api.py  test_auth_service.py  test_db_service.py  test_digirent.py  test_file_service.py  test_inivitaton_api.py  test_me_api.py  test_models.py  test_user_api.py  test_user_service.py  test_util.py
(+75 files in other folders)
